# gern

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  plotter.py  suppressions.txt  test.cu  vcpkg-configuration.json  vcpkg.json
.github/workflows/: main.yml
apps/: CMakeLists.txt
apps/blur/: CMakeLists.txt  Makefile  bench-blur.sh  bench_range.h  blur.cpp  blur.cu  blur_bench.cpp  gern  gern_blur  halide  halide_blur.h  halide_blur.halide_generated.cpp  halide_blur.stmt  halide_blur_generator.cpp  halide_blur_main.cpp  out  triton  value.h
apps/blur/build_halide/: halide_blur.h  halide_run
apps/blur/data/: blur2d.data.csv
apps/blur/halide_build/: gern_blur  halide_blur.h  halide_blur.halide_generated.cpp  halide_blur.stmt  halide_gen  halide_run
apps/common/annot/: adt.h  functions.h
apps/common/impl/: gpu-matrix-const.h  impl.h
apps/halide_blur/: CMakeLists.txt  test.cpp
apps/mm/: CMakeLists.txt  Makefile  Makefile.inc  benchmark.h  mm.cpp  profile_gemm.sh  sgemm.cu  sgemm_device.cuh  shared_mem.cu  shims.cuh  shims.h  test.cu
apps/mm/data/: cublas_perf  device_perf  gern_perf
apps/skeleton/: CMakeLists.txt  main.cpp
apps/softmax/: CMakeLists.txt  Makefile  Makefile.inc  benchmark.h  gpu-matrix-const.h  impl.h  main.cpp  main.cu  original.cuh  softmax.cpp  test.cu
apps/softmax/annot/: adt.h  functions.h
apps/softmax/annotations/: gpu-matrix-const.h
cmake/: GernConfig.cmake.in
gernels/: CMakeLists.txt  benchmark.h  current_path.h
gernels/blur/: CMakeLists.txt  Makefile  cmake_install.cmake  halide_blur_main.cpp  triton  triton_2d_blur.py  triton_ir_blur_fused_blocks
gernels/cccl/: CMakeLists.txt  a.out  global_reduce.cpp  hello_cccl.cpp  rdom_mimic.cpp  test.cu
gernels/cccl/annotations/: adt.h  functions.h
gernels/cccl/gern_annot/: adt.h  functions.h
gernels/cccl/wrappers/: adt.h  reduce_wrappers.cuh
gernels/mm/: CMakeLists.txt  Makefile  README.md  bench  bench.cu  bench.sh  debug  debug.cu  float-error.h  helpers.h  kernel_1.cpp  kernel_1.cu  kernel_1.h  kernel_10.cu  kernel_2.cpp  kernel_2.cu  kernel_2.h  kernel_3.cpp  kernel_3.cu  kernel_3.h  kernel_6.cu  mm.cpp  mm_helpers.h  mm_registers.cpp  mm_registers.cu  mm_shared.cu  mm_trivial.cu  perf_kernel_3.cu  perf_kernel_4_2d_tiling.cu  schedules.h
gernels/mm/gern_annot/: adt.h  functions.h  shmem_interface.h
gernels/mm/impl/: Makefile  column-major.h  matrix-gpu.h  matrix_multiply.h  sh_malloc.h  smem_2d.cu  smem_2d_vec.cu  smem_new.cu  smem_warp_tile.cu  sync-exp.cu  test.cu
include/annotations/: abstract_function.h  abstract_nodes.h  argument.h  argument_visitor.h  arguments.h  data_dependency_language.h  datatypes.h  grid.h  lang_nodes.h  rewriter_helpers.h  visitor.h
include/codegen/: codegen.h  codegen_ir.h  codegen_printer.h  codegen_visitor.h  lower.h  lower_visitor.h  runner.h
include/compose/: composable.h  composable_visitor.h  compose.h  compose_visitor.h  pipeline.h  pipeline_visitor.h  runner.h
include/gern/annotations/: abstract_function.h  argument.h  argument_visitor.h  data_dependency_language.h  expr.h  expr_nodes.h  grid.h  lang_nodes.h  rewriter.h  rewriter_helpers.h  shared_memory_manager.h  std_less_specialization.h  stmt.h  visitor.h
include/gern/codegen/: codegen.h  codegen_ir.h  codegen_printer.h  codegen_visitor.h  concretize.h  finalizer.h  lower.h  lower_visitor.h  optimizer.h
include/resolve_constraints/: resolve_constraints.h
include/utils/: debug.h  error.h  name_generator.h  printer.h  scoped_map.h  scoped_set.h  uncopyable.h
prez/: 10_gpu_tiling.cu  11_gpu_smem.cu  1_trivial.cpp  1_trivial_use.cpp  2_jit.cpp  3_multi_func.cpp  4_multi_funct_matrix.cpp  5_tile_program.cpp  6_more_tilings.cpp  7_reduction.cpp  8_matrix_multiply.cpp  9_gpu_trivial.cu  CMakeLists.txt  Makefile  helpers.h  our-matrix-multiply.h
prez/gern_gen/: multi_func.cpp  program.cpp  program.cu  tile_program.cpp
python/: 2d_attention_test.py  4d_attention_test.py  attention_test.py  attention_test2.py  bert-benchmark.py  bert-test.py  generate_torch_compile_pipeline.py  generate_torch_compile_pipeline_4d.py  output.txt  output3.txt  output4.txt  python_test.py  pytorch_ex.py  results.txt  simple_test.py  softmax_test.py  split_pipeline_attention_test.py  split_pipeline_test.py
smem_allocator/: Makefile  sh_malloc.cu  sh_malloc.cuh  test  test.cu
src/: CMakeLists.txt
src/annotations/: abstract_data.cpp  abstract_function.cpp  argument.cpp  argument_visitor.cpp  data_dependency_language.cpp  datatypes.cpp  grid.cpp  lang_nodes.cpp  visitor.cpp
src/codegen/: codegen.cpp  codegen_ir.cpp  codegen_printer.cpp  codegen_visitor.cpp  concretize.cpp  finalizer.cpp  lower.cpp  lower_visitor.cpp  optimizer.cpp  runner.cpp
src/compose/: composable.cpp  composable_visitor.cpp  compose.cpp  compose_visitor.cpp  pipeline.cpp  pipeline_visitor.cpp
src/python_bindings/: bindings.cpp
src/resolve_constraints/: resolve_constraints.cpp
src/utils/: name_generator.cpp
test/: CMakeLists.txt  config.h  config.h.in  test-annotations.cpp  test-composable.cpp  test-cpu-array.cpp  test-cpu-matrix.cpp  test-cpu-mm.cpp  test-cpu-reduction.cpp  test-cpu-static-store.cpp  test-dynamic-shared.cpp  test-dynamic-shared.cu  test-expr-nodes.cpp  test-function-ptr.cpp  test-functions.cpp  test-gpu-array.cpp  test-gpu-array.cu  test-gpu-matrix.cpp  test-gpu-utils.h  test-grid-constraints.cpp  test-grid-property.cpp  test-hello-world.cpp  test-lowering-cpu.cpp  test-lowering-gpu.cpp  test-lowering.cpp  test-map-grid.cpp  test-new-interface.cpp  test-nodes.cpp  test-ordered-parameters.cpp  test-pipeline.cpp  test-resolve-constraints.cpp  test-runner.cpp  test-same-expr.cpp  test-set-grid.cpp  test-set-unit.cpp  test-stage.cpp  test-stmt-nodes.cpp  test-temp-reuse.cpp  test-utils.h
test/functions/: elementwise.h  reduction.h
test/nested_pipelines/: test-nested-cpu.cpp
vcpkg/cln/: fix-build-path-independence.patch  portfile.cmake  vcpkg.json
vcpkg/ginac/: fix-linking.patch  portfile.cmake  vcpkg.json
(+13 files in other folders)
